# Display_Audio_Project

./: logs.txt
audio_board/: .gitignore  CMakeLists.txt  README.md  flash_signed.sh  load_env.cmake  partitions.csv  release.py  sdkconfig.defaults
audio_board/components/barcode_scanner/: CMakeLists.txt
audio_board/components/dfplayer/: README.md
audio_board/components/p10display/: README.md  idf_component.yml  p10display.c
audio_board/main/: CMakeLists.txt  idf_component.yml
audio_board/main/inc/: main.h  mp3board.h  token_display.h  wifi.h
audio_board/main/src/: espnow.c  main.c  mp3board.c  ota.c  ota_selftest.c  provisioning.c  supabase.c  wifi.c
smart_token_display/: .env.example  .gitignore  CMakeLists.txt  README.md  flash_signed.sh  partitions.csv  release.py  sdkconfig.defaults
smart_token_display/components/barcode_scanner/: CMakeLists.txt  barcode_scanner.c  idf_component.yml
smart_token_display/components/dfplayer/: CMakeLists.txt  dfplayer.c
smart_token_display/components/p10display/: CMakeLists.txt  p10display.c
smart_token_display/db/: device_status.sql  ota_status.sql  rls_policies.sql  system_control.sql  token_events.sql  token_scan_counts.sql  token_scans.sql  token_status.sql
smart_token_display/main/: CMakeLists.txt  idf_component.yml
smart_token_display/main/inc/: espnow.h  main.h  supabase.h  token_display.h
smart_token_display/main/src/: crash_report.c  espnow.c  main.c  ota.c  provisioning.c  supabase.c  token_display.c
smart_token_display/ref/: main.c  p10display.c
(+3 files in other folders)
